@@ -1,5 +1,11 @@
 2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* src/GdbServer.cpp (GdbServer::pendingStop): Remove debug message.
+	(GdbServer::markPendingStops): Likewise.
+	(GdbServer::removePendingStop): Likewise.
+
+2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	* src/GdbServer.cpp (GdbServer::markPendingStops): Also remove
 	pending stop for exclusion thread. Reduce debug messages.
 	(GdbServer::doContinue): No need to remove pending stop - done by
